# consoleet-utils

./: .gitignore  Makefile.am  README.rst  configure.ac  cp1090f.uni  cp437table  cp437x.uni  qconf  unicode_table
doc/: NEWS.txt  changelog.rst  clt2bdf.1  clt2pbm.1  palcomp.1  vfontas-formats.dot  vfontas.1
src/: clt2bdf.c  clt2pbm.c  cltscale.c  cltxscale.c  colortable  cp437table  glynames.cpp  palcomp.cpp  unitable  vfalib.cpp  vfalib.hpp  vfontas.cpp  xbrz_call.cpp  xbrz_call.h
